--- a/404.md
+++ b/404.md
@@ -8,4 +8,16 @@ search_exclude: true
 
 # 404
 
-页面无法访问……请检查网址是否有误。[点此返回主页](/)。
+找不到对应网页……可能是您网址输入错误，或者该页面暂未完成。您可以试试：
+
+* 点此访问 Scala 3 官方网站：
+  * [Scala 3](https://dotty.epfl.ch/)
+* 点此访问项目的 GitHub 仓库，帮助我们改进网站：
+  * [Dotty-China/dotty-china.github.io](https://github.com/Dotty-China/dotty-china.github.io)
+* 点此进入 issue 页面，提出您的问题：
+  * [issues](https://github.com/Dotty-China/dotty-china.github.io/issues)
+* 点此加入 QQ 群联系我们：
+  * [Dotty (314968684)](https://jq.qq.com/?_wv=1027&k=BCxI4ukn)
+
+
+[点此返回主页](/)
